--- a/Wangdao/Wangdao.vcxproj
+++ b/Wangdao/Wangdao.vcxproj
@@ -134,6 +134,9 @@
     <ClInclude Include="LinkQueue.h" />
     <ClInclude Include="LinkStack.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
