--- a/Wangdao/Wangdao.vcxproj
+++ b/Wangdao/Wangdao.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicType.h" />
+    <ClInclude Include="LinkBTree.h" />
     <ClInclude Include="LinkQueue.h" />
     <ClInclude Include="LinkStack.h" />
   </ItemGroup>
