--- a/Wangdao/Wangdao.vcxproj.filters
+++ b/Wangdao/Wangdao.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="LinkQueue.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LinkBTree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md">
