--- a/Wangdao/Wangdao.vcxproj.filters
+++ b/Wangdao/Wangdao.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="LinkBTree.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="SqStack.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md">
