--- a/Wangdao/Wangdao.vcxproj
+++ b/Wangdao/Wangdao.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="LinkBTree.h" />
     <ClInclude Include="LinkQueue.h" />
     <ClInclude Include="LinkStack.h" />
+    <ClInclude Include="SqQueue.h" />
     <ClInclude Include="SqStack.h" />
   </ItemGroup>
   <ItemGroup>
